# sdl-ffmpeg-player

./: CMakeLists.txt  build.sh
src/: Audio.cpp  Player.h  SDLWrapper.cpp  main.cpp  stdafx.h
